--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.funsdkdemo"
     android:versionCode="140"
-    android:versionName="1.4.0" >
+    android:versionName="1.4.0">
 
     <!-- <uses-permission android:name="com.example.permission.RECEIVE_MY_BROADCAST" /> -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -37,6 +38,7 @@
         android:allowBackup="true"
         android:icon="@drawable/logo_app"
         android:label="@string/app_name"
+        tools:ignore="GoogleAppIndexingWarning"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.funsdkdemo.ActivityStartup"
